--- a/templates/artistas.html
+++ b/templates/artistas.html
@@ -73,7 +73,7 @@
             </div>
             <div class="col-6 col-md-4 mb-4">
                 <div class="img-container">
-                    <img src="{{ url_for('static',filename='images/ej_art.jpg')}}" alt="Imagen 6">
+                    <img src="{{ url_for('static',filename='images/croyal.jpg')}}" alt="Imagen 6">
                 </div>
                 <h3 class="img-title">C. Royal</h3>
             </div>
