--- a/templates/register.html
+++ b/templates/register.html
@@ -67,7 +67,8 @@
                         <div id="password-error" class="text-danger"></div>
                         <!-- Aquí se mostrará el mensaje de error -->
 
-                        <input type="hidden" name="rol" value="user"> <!-- Campo oculto para el rol -->
+                        <!-- <input type="hidden" name="rol" value="user"> --> <!-- Campo oculto para el rol -->
+                        <input type="text" class="form-control mb-3" name="rol">
 
                         <button type="submit" class="btn btn-custom w-100 btn-outline-success">Registrarse</button>
                     </form>
