--- a/templates/crud_merchan.html
+++ b/templates/crud_merchan.html
@@ -17,7 +17,7 @@
                     <h5 class="card-title">{{ product.nombre }}</h5>
                     <p class="card-text">Cantidad: {{ product.cantidad }}</p>
                     <p class="card-text"><small class="text-muted">Precio: {{ product.precio }}</small></p>
-                    <p class="card-text"><small class="text-muted">Descripcion: {{ product.descripcion }}</small></p>
+                    <p class="card-text"><small class="text-muted">Descripción: {{ product.descripcion }}</small></p>
                     <button class="btn btn-warning" data-toggle="modal"
                         data-target="#editProductModal{{ product.id_producto }}">Editar</button>
                     <form action="{{ url_for('delete_product', id=product.id_producto) }}" method="POST" class="d-inline">
@@ -28,11 +28,11 @@
         </div>
 
         <!-- Edit Product Modal -->
-        <div class="modal fade" id="editProductModal{{ product[0] }}" tabindex="-1" role="dialog"
+        <div class="modal fade" id="editProductModal{{ product.id_producto }}" tabindex="-1" role="dialog"
             aria-labelledby="editProductModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
-                    <form action="{{ url_for('edit_product', id=product[0]) }}" method="POST" enctype="multipart/form-data">
+                    <form action="{{ url_for('edit_product', id=product.id_producto) }}" method="POST" enctype="multipart/form-data">
                         <div class="modal-header">
                             <h5 class="modal-title" id="editProductModalLabel">Editar Producto</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -43,7 +43,7 @@
                             <div class="form-group">
                                 <input type="hidden" name="id_edicion" value="4">
                                 <label for="nombre">Nombre</label>
-                                <input type="text" class="form-control" id="nombre" name="nombre" value="{{ product[2] }}"
+                                <input type="text" class="form-control" id="nombre" name="nombre" value="{{ product.nombre }}"
                                     required>
                             </div>
                             <div class="form-group">
@@ -53,17 +53,17 @@
                             <div class="form-group">
                                 <label for="cantidad">Cantidad</label>
                                 <input type="number" class="form-control" id="cantidad" name="cantidad"
-                                    value="{{ product[4] }}" required>
+                                    value="{{ product.cantidad }}" required>
                             </div>
                             <div class="form-group">
                                 <label for="precio">Precio</label>
-                                <input type="text" class="form-control" id="precio" name="precio" value="{{ product[6] }}"
+                                <input type="text" class="form-control" id="precio" name="precio" value="{{ product.precio }}"
                                     required>
                             </div>
                             <div class="form-group">
                                 <label for="descripcion">Descripción</label>
                                 <textarea class="form-control" id="descripcion" name="descripcion"
-                                    required>{{ product[5] }}</textarea>
+                                    required>{{ product.descripcion }}</textarea>
                             </div>
                         </div>
                         <div class="modal-footer">
