--- a/templates/merchandising.html
+++ b/templates/merchandising.html
@@ -9,13 +9,13 @@
         {% for product in products %}
         <div class="col-lg-3 col-md-4 col-sm-6 col-12 mb-4">
             <div class="card">
-                <img src="{{ url_for('static', filename='images/productos/' + product[3]) }}" class="card-img-top" alt="{{ product[2] }}">
+                <img src="{{ url_for('static', filename='images/productos/' + product.imagen) }}" class="card-img-top" alt="{{ product.nombre }}">
                 <div class="card-body">
-                    <h5 class="card-title">{{ product[2] }}</h5>
-                    <p class="card-text">Precio: {{ product[6] }}€</p>
-                    <p class="card-text">Descripción: {{ product[5] }}</p>
+                    <h5 class="card-title">{{ product.nombre }}</h5>
+                    <p class="card-text">Precio: {{ product.precio }}€</p>
+                    <p class="card-text">Descripción: {{ product.descripcion }}</p>
                     {% if 'email' in session %}
-                        <a href="{{ url_for('producto', producto_id=product[0]) }}" class="btn btn-success">Ver Producto</a>
+                        <a href="{{ url_for('producto', producto_id=product.id_producto) }}" class="btn btn-success">Ver Producto</a>
                     {% else %}
                         <button class="btn btn-secondary" disabled>Ver Producto</button>
                         <p class="text-danger mt-2">Inicia sesión para comprar</p>
