--- a/templates/crud_merchan.html
+++ b/templates/crud_merchan.html
@@ -9,7 +9,7 @@
     <h2>Productos de Merchandising CRUD </h2>
     <button class="btn btn-primary mb-3" data-toggle="modal" data-target="#addProductModal">Añadir Producto</button>
     <div class="row justify-content-center">
-        {% for product in products %}
+        {% for product in productos %}
         <div class="col-lg-3 col-md-4 col-sm-6 mb-3">
             <div class="card">
                 <img src="{{ url_for('static', filename='images/productos/' + product.imagen) }}" class="card-img-top" alt="{{ product.nombre }}">
