--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -73,19 +73,19 @@
             <h2>Conoce al Equipo</h2>
             <div class="row">
                 <div class="col-md-4 team-member">
-                    <img src="{{url_for('static', filename='images/fotoCV.jpg')}}" class="rounded-circle mb-3 " alt="Nombre del Miembro">
+                    <img src="{{url_for('static', filename='images/fotoCV.jpg')}}" class="rounded-circle mb-3 " alt="David Escrivá">
                     <h5>David Escrivá</h5>
                     <p class="text-muted">Fundador y Director</p>
                     <p>Fundador de la idea, aporta conocimientos en diseño, marketing y desarrollo web.</p>
                 </div>
                 <div class="col-md-4 team-member">
-                    <img src="{{url_for('static', filename='images/ivan.jpg')}}" class="rounded-circle mb-3" alt="Nombre del Miembro">
+                    <img src="{{ url_for('static',filename='images/eskaerre.jpg')}}" class="rounded-circle mb-3" alt="Iván Escrivá">
                     <h5>Iván Escrivá</h5>
                     <p class="text-muted">Director de Comunicación</p>
                     <p>Lleva a cabo toda la comunicación tanto con artistas, patrocinadores, etc.</p>
                 </div>
                 <div class="col-md-4 team-member">
-                    <img src="{{url_for('static', filename='images/manu.jpg')}}" class="rounded-circle mb-3" alt="Nombre del Miembro">
+                    <img src="{{url_for('static', filename='images/manu.jpg')}}" class="rounded-circle mb-3" alt="Juan Manuel Moreno">
                     <h5>Juan Manuel Moreno</h5>
                     <p class="text-muted">Gerente de Administración</p>
                     <p>Gestiona toda la parte económica que conlleva la realización del proyecto.</p>
