--- a/templates/artistas.html
+++ b/templates/artistas.html
@@ -43,13 +43,13 @@
         <div class="row">
             <div class="col-6 col-md-4 mb-4">
                 <div class="img-container">
-                    <img src="{{ url_for('static',filename='images/eskaerre.jpg')}}" alt="Imagen 1">
+                    <img src="{{ url_for('static',filename='images/eskaerre.jpg')}}" alt="Eskaerre">
                 </div>
                 <h3 class="img-title">Eskaerre</h3>
             </div>
             <div class="col-6 col-md-4 mb-4">
                 <div class="img-container">
-                    <img src="{{ url_for('static',filename='images/flekos.jpg')}}" alt="Imagen 2">
+                    <img src="{{ url_for('static',filename='images/flekos.jpg')}}" alt="Flekos">
                 </div>
                 <h3 class="img-title">Flekos</h3>
             </div>
@@ -61,19 +61,19 @@
             </div>
             <div class="col-6 col-md-4 mb-4">
                 <div class="img-container">
-                    <img src="{{ url_for('static',filename='images/dawe.jpg')}}" alt="Imagen 4">
+                    <img src="{{ url_for('static',filename='images/dawe.jpg')}}" alt="Dawe Trankitenso">
                 </div>
                 <h3 class="img-title">Dawe Trankitenso</h3>
             </div>
             <div class="col-6 col-md-4 mb-4">
                 <div class="img-container">
-                    <img src="{{ url_for('static',filename='images/vega.jpg')}}" alt="Imagen 5">
+                    <img src="{{ url_for('static',filename='images/vega.jpg')}}" alt="Dj Vega">
                 </div>
                 <h3 class="img-title">Dj Vega</h3>
             </div>
             <div class="col-6 col-md-4 mb-4">
                 <div class="img-container">
-                    <img src="{{ url_for('static',filename='images/croyal.jpg')}}" alt="Imagen 6">
+                    <img src="{{ url_for('static',filename='images/croyal.jpg')}}" alt="C. Royal">
                 </div>
                 <h3 class="img-title">C. Royal</h3>
             </div>
