--- a/templates/merchandising.html
+++ b/templates/merchandising.html
@@ -6,7 +6,7 @@
 <div class="container mt-4">
     <h2>Productos de Merchandising</h2>
     <div class="row">
-        {% for product in products %}
+        {% for product in productos %}
         <div class="col-lg-3 col-md-4 col-sm-6 col-12 mb-4">
             <div class="card">
                 <img src="{{ url_for('static', filename='images/productos/' + product.imagen) }}" class="card-img-top" alt="{{ product.nombre }}">
