--- a/templates/carrito.html
+++ b/templates/carrito.html
@@ -59,11 +59,11 @@
                         <td>
                             <input type="checkbox" name="productos_a_eliminar" value="{{ i }}">
                         </td>
-                        <td>{{ product[2] }}</td>
-                        <td>{{ product[6] }}€</td>
-                        <td>{{ product[7] }}</td>
-                        <td>{{ product[8] }}</td>
-                        <td>{{ (product[6]|float) * (product[7]|float) }}€</td>
+                        <td>{{ product.nombre }}</td>
+                        <td>{{ product.precio }}€</td>
+                        <td>{{ product.cantidad }}</td>
+                        <td>{{ product.talla }}</td>
+                        <td>{{ (product.precio|float) * (product.cantidad|float) }}€</td>
                     </tr>
                     {% endfor %}
                     <tr>
