--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -53,7 +53,7 @@
 
     // Redirige al usuario a otra página después de 3 segundos
     setTimeout(function(){
-      window.location.href = "http://127.0.0.1:5000/contacto";
+      window.location.href = "https://tfg-udp9.onrender.com/contacto";
     }, 3000); // 3000 milisegundos = 3 segundos
   });
 </script>
