--- a/templates/footer.html
+++ b/templates/footer.html
@@ -19,16 +19,16 @@
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                 <h5 class="text-uppercase">Boring stuff</h5>
                 <ul class="list-unstyled mb-0">
-                    <li><a href="#!" class="text-white" style="text-decoration: none;">Aviso legal</a></li>
-                    <li><a href="#!" class="text-white" style="text-decoration: none;">Política de privacidad</a></li>
-                    <li><a href="#!" class="text-white" style="text-decoration: none;">Términos</a></li>
+                    <li><a href="/avisolegal" class="text-white" style="text-decoration: none;">Aviso legal</a></li>
+                    <li><a href="/privacidad" class="text-white" style="text-decoration: none;">Política de privacidad</a></li>
+                    <li><a href="/terminos" class="text-white" style="text-decoration: none;">Términos</a></li>
                 </ul>
             </div>
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                 <h5 class="text-uppercase mb-0">Support</h5>
                 <ul class="list-unstyled">
-                    <li><a href="#!" class="text-white" style="text-decoration: none;">Devoluciones</a></li>
-                    <li><a href="#!" class="text-white" style="text-decoration: none;">FAQ</a></li>
+                    <li><a href="/trabaja" class="text-white" style="text-decoration: none;">Trabaja con nosotros</a></li>
+                    <li><a href="/faq" class="text-white" style="text-decoration: none;">FAQ</a></li>
                     <li><a href="/contacto" class="text-white" style="text-decoration: none;">Contacto</a></li>
                 </ul>
             </div>
@@ -37,6 +37,6 @@
 
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
         © 2023 Derechos Reservados:
-        <a class="text-white" href="/index">allorofestival.com</a>
+        <a class="text-white" href="/">allorofestival.com</a>
     </div>
 </footer>
