--- a/templates/gracias-compra.html
+++ b/templates/gracias-compra.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Términos del servicio{% endblock %}
+{% block title %}Gracias!{% endblock %}
 
 {% block content %}
 {% include 'navbar.html' %}
