--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,13 +5,13 @@
             <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
                 <h5 class="text-uppercase d-flex justify-content-center">Síguenos en nuestras redes sociales</h5>
                 <div class="d-flex justify-content-around align-items-center">
-                    <a href="https://www.instagram.com/festival_al_loro/" class="text-white mr-4"><img
+                    <a href="https://x.com/alloro_festival" class="text-white mr-4"><img
                             src="{{ url_for('static',filename='images/twitter.svg' )}}" alt="Logo Twitter"
                             style="width: 40px;"></a>
                     <a href="https://www.instagram.com/festival_al_loro/" class="text-white mr-4"><img
                             src="{{ url_for('static',filename='images/instagram.svg' )}}" alt="Logo Instagram"
                             style="width: 40px; text-decoration: none;"></a>
-                    <a href="https://www.instagram.com/festival_al_loro/" class="text-white"><img
+                    <a href="https://www.youtube.com/channel/UCAvWHBbFLZcrbeYdByZ0PFg" class="text-white"><img
                             src="{{ url_for('static',filename='images/youtube.svg' )}}" alt="Logo Youtube"
                             style="width: 40px;"></a>
                 </div>
