--- a/templates/artistas.html
+++ b/templates/artistas.html
@@ -7,8 +7,6 @@
     <title>Artistas</title>
     <link rel="icon" href="{{url_for('static', filename='images/logo_byv.png')}}" type="image/x-icon">
 
-    <link rel="stylesheet" href="{{url_for('static', filename='css/artistas_style.css')}}">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -16,7 +14,52 @@
         crossorigin="anonymous"></script>
 
     <style>
-        
+        .form-control {
+            background: #e1e1e1;
+            margin: 8px 0;
+        }
+
+        .form-control:focus {
+            border-color: #16a085;
+            box-shadow: none;
+            background: #fff;
+        }
+
+        .btn-custom {
+            background-color: green;
+            color: white;
+            border: none;
+            border-radius: 20px;
+            font-size: 1.2em;
+            transition: background-color 0.3s;
+        }
+
+        .btn-custom:hover {
+            background-color: white;
+            border: 1px solid green;
+            color: green
+        }
+
+        .img-container {
+            position: relative;
+            overflow: hidden;
+        }
+
+        .img-container img {
+            width: 100%;
+            filter: grayscale(100%);
+            transition: filter 0.3s ease;
+        }
+
+        .img-container img:hover {
+            filter: grayscale(0%);
+            transform: scale(1.1);
+        }
+
+        .img-title {
+            text-align: center;
+            margin-top: 10px;
+        }
     </style>
 </head>
 
