--- a/templates/edicion3.html
+++ b/templates/edicion3.html
@@ -30,13 +30,13 @@
             color: #28a745;
         }
 
-        .btn-custom {
+        .envio {
             background-color: #28a745;
             color: white;
             border: none;
         }
 
-        .btn-custom:hover {
+        .envio:hover {
             background-color: #218838;
         }
     </style>
@@ -83,7 +83,7 @@
                     <input type="tel" class="form-control" id="telefono" name="telefono" pattern="^\d{9}$" required>
                     <div class="form-text">Ingrese un número de teléfono válido de 9 dígitos.</div>
                 </div>
-                <button type="submit" class="btn btn-custom w-100">Enviar</button>
+                <button type="submit" class="btn btn-custom w-100 envio">Enviar</button>
             </form>
         </div>
     </div>
